// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 1`] = `
Object {
  "commit": Object {
    "author": Object {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": Object {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deployed": "2022-10-17T07:44:43Z",
  "id": "31",
  "job": Object {
    "label": "deploy-prod (#860)",
    "webPath": "/gitlab-org/pipelinestest/-/jobs/860",
  },
  "status": "success",
  "triggerer": Object {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
}
`;

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 2`] = `
Object {
  "commit": Object {
    "author": Object {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": Object {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deployed": "2022-10-17T07:44:43Z",
  "id": "31",
  "job": undefined,
  "status": "success",
  "triggerer": Object {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
}
`;

exports[`deployment_data_transformation_helper convertToDeploymentTableRow should be converted to proper table row data 3`] = `
Object {
  "commit": Object {
    "author": Object {
      "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
      "path": "http://gdk.test:3000/root",
      "username": "Administrator",
    },
    "commitRef": Object {
      "name": "main",
    },
    "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
    "shortSha": "0cb48dd5",
    "tag": false,
    "title": "Update .gitlab-ci.yml file",
  },
  "created": "2022-10-17T07:44:17Z",
  "deployed": "",
  "id": "31",
  "job": null,
  "status": "success",
  "triggerer": Object {
    "avatarUrl": "/uploads/-/system/user/avatar/1/avatar.png",
    "id": "gid://gitlab/User/1",
    "name": "Administrator",
    "webUrl": "http://gdk.test:3000/root",
  },
}
`;

exports[`deployment_data_transformation_helper getAuthorFromCommit should be properly converted 1`] = `
Object {
  "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
  "path": "http://gdk.test:3000/root",
  "username": "Administrator",
}
`;

exports[`deployment_data_transformation_helper getAuthorFromCommit should be properly converted 2`] = `
Object {
  "avatar_url": "https://www.gravatar.com/avatar/91811aee1dec1b2655fa56f894e9e7c9?s=80&d=identicon",
  "path": "mailto:azubov@gitlab.com",
  "username": "Andrei Zubov",
}
`;

exports[`deployment_data_transformation_helper getCommitFromDeploymentNode should get correclty formatted commit object 1`] = `
Object {
  "author": Object {
    "avatar_url": "/uploads/-/system/user/avatar/1/avatar.png",
    "path": "http://gdk.test:3000/root",
    "username": "Administrator",
  },
  "commitRef": Object {
    "name": "main",
  },
  "commitUrl": "http://gdk.test:3000/gitlab-org/pipelinestest/-/commit/0cb48dd5deddb7632fd7c3defb16075fc6c3ca74",
  "shortSha": "0cb48dd5",
  "tag": false,
  "title": "Update .gitlab-ci.yml file",
}
`;
